--- a/src/assets/styles/helpers/_box-model.scss
+++ b/src/assets/styles/helpers/_box-model.scss
@@ -3,6 +3,11 @@
     margin: 0;
 }
 
+.m-x-8 {
+    margin-right: 0.5rem;
+    margin-left: 0.5rem;
+}
+
 .m-y-32 {
     margin: 2rem 0;
 }
@@ -13,7 +18,7 @@
 }
 
 .m-b-8 {
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
 }
 
 .m-b-16 {
@@ -22,4 +27,12 @@
 
 .m-t-16 {
     margin-top: 1rem;
+}
+
+.m-r-8 {
+    margin-right: 0.5rem;
+}
+
+.m-l-8 {
+    margin-left: 0.5rem;
 }
