feat(edit-post): add edit post view

--- a/src/app/features/posts/user-posts/user-posts.component.html
+++ b/src/app/features/posts/user-posts/user-posts.component.html
@@ -148,7 +148,7 @@
                     </div>
                     
                     <div class="flex gap-05">
-                      <button mat-raised-button color="primary" class="flex_between_center">
+                      <button mat-raised-button color="primary" class="flex_between_center" [routerLink]="['/posts/edit', post.id]">
                           <mat-icon>edit</mat-icon>
                           <span *ngIf="!isMobile">Editar</span>
                       </button>
