--- a/src/assets/styles/helpers/_display.scss
+++ b/src/assets/styles/helpers/_display.scss
@@ -61,10 +61,10 @@
   align-items: center;
 }
 
-// .flex_end_center {
-//   justify-content: flex-end;
-//   align-items: center;
-// }
+.flex_end_center {
+  justify-content: flex-end;
+  align-items: center;
+}
 
 .flex_justify_end {
   justify-content: flex-end;
@@ -79,9 +79,9 @@
 //   align-items: center;
 // }
 
-// .flex-grow-1 {
-//   flex: 1;
-// }
+.flex-grow-1 {
+  flex: 1;
+}
 
 // .flex-shrink-0 {
 //   flex-shrink: 0;
