fix(planishare): fix styles

--- a/src/app/features/posts/edit-post/edit-post.component.html
+++ b/src/app/features/posts/edit-post/edit-post.component.html
@@ -1,6 +1,6 @@
 <main class="main">
     <div class="flex-grow-1">
-      <button mat-raised-button [routerLink]="['/']"class="back-button">
+      <button mat-raised-button [routerLink]="['/posts/user']" class="back-button">
         <mat-icon>arrow_back</mat-icon>
         <span>Volver a publicaciones propias</span>
       </button>
