--- a/src/app/features/posts/create-post/create-post.component.html
+++ b/src/app/features/posts/create-post/create-post.component.html
@@ -2,7 +2,7 @@
   <div>
     <button mat-raised-button (click)="goBack()" class="back-button">
       <mat-icon>arrow_back</mat-icon>
-      <span>Volver a resultados</span>
+      <span>Volver</span>
     </button>
     <!-- Form -->
     <mat-card class="card">
