feat(planishare): add verify email logic

--- a/src/app/features/homepage/homepage/homepage.component.scss
+++ b/src/app/features/homepage/homepage/homepage.component.scss
@@ -3,6 +3,7 @@
 
     background-image: url('/assets/images/bg-desktop-yellow.png');
     background-size: contain;
+    background-attachment: fixed;
     
     padding: 4rem 0rem 1rem 0rem;
     
