--- a/src/app/features/homepage/results/results.component.scss
+++ b/src/app/features/homepage/results/results.component.scss
@@ -2,7 +2,7 @@
     display: block;
     background-image: url('/assets/images/bg-desktop-yellow.png');
     background-size: contain;
-    // background-attachment: fixed;
+    background-attachment: fixed;
 
     padding: 4rem 4rem 1rem 4rem;
     
