feat(planishare): add forgot password logic

--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -45,6 +45,7 @@
                             <mat-icon>login</mat-icon>
                             Continuar con google
                         </button>
+                        <a class="forgot-password" (click)="openForgotPasswordDialog()">¿Olvidaste tu contraseña?</a>
                     </div>
                   </form>
             </mat-card-content>
