--- a/src/app/features/homepage/components/results-shimmer/results-shimmer.component.html
+++ b/src/app/features/homepage/components/results-shimmer/results-shimmer.component.html
@@ -1,9 +1,9 @@
 <div class="posts">
   <mat-card class="card" *ngFor="let item of [].constructor(2); let i = index">
     <div class="card-content">
-      <ngx-shimmer-loading *ngIf="!isMobile" [width]="'400px'" [height]="'265px'"></ngx-shimmer-loading>
+      <!-- <ngx-shimmer-loading *ngIf="!isMobile" [width]="'400px'" [height]="'265px'"></ngx-shimmer-loading> -->
       <div>
-        <ngx-shimmer-loading *ngIf="isMobile" width="100%" height="12rem"></ngx-shimmer-loading>
+        <!-- <ngx-shimmer-loading *ngIf="isMobile" width="100%" height="12rem"></ngx-shimmer-loading> -->
         <div class="m-y-8">
           <ngx-shimmer-loading width="15rem" height="1rem"></ngx-shimmer-loading>
         </div>
@@ -32,7 +32,7 @@
         </mat-card-content>
       </div>
     </div>
-    <mat-card-footer class="card-footer">
+    <div class="card-footer">
       <div class="reaction-info">
           <div>
             <mat-icon>favorite</mat-icon>
@@ -47,6 +47,6 @@
       <button mat-icon-button>
           <mat-icon>favorite</mat-icon>
       </button>
-    </mat-card-footer>
+    </div>
   </mat-card>
 </div>
