--- a/src/app/features/homepage/results/results.component.html
+++ b/src/app/features/homepage/results/results.component.html
@@ -98,21 +98,19 @@
     <ng-container *ngFor="let post of posts">
       <mat-card class="card">
         <div class="card-body">
-          <img
+          <!-- <img
             src="/assets/images/doc-test.jpg"
             alt="document-image"
             class="card-image-desktop"
             *ngIf="!isMobile"
-            (click)="navigateToDetail(post.id)">
-          <!-- <img src="/assets/images/ppt-test.jpg" alt="document-image" class="card-image" *ngIf="!isMobile"> -->
+            (click)="navigateToDetail(post.id)"> -->
           <div class="card-content">
-            <img
+            <!-- <img
               src="/assets/images/doc-test.jpg"
               alt="document-image"
               class="card-image-mobile"
               *ngIf="isMobile"
-              (click)="navigateToDetail(post.id)">
-            <!-- <img src="/assets/images/ppt-test.jpg" alt="document-image" class="card-image" *ngIf="isMobile"> -->
+              (click)="navigateToDetail(post.id)"> -->
             <mat-card-subtitle>{{ post.user|getUsername }} - {{ post.created_at|timeAgo }}</mat-card-subtitle>
             <mat-card-title (click)="navigateToDetail(post.id)">{{ post.title }}</mat-card-title>
   
@@ -154,7 +152,7 @@
           </div>
         </div>
   
-        <mat-card-footer class="card-footer">
+        <div class="card-footer">
           <div class="reaction-info">
             <div>
               <mat-icon>favorite</mat-icon>
@@ -170,7 +168,7 @@
             <mat-icon *ngIf="!!post.already_liked">favorite</mat-icon>
             <mat-icon *ngIf="!!!post.already_liked">favorite_outline</mat-icon>
           </button>
-        </mat-card-footer>
+        </div>
       </mat-card>
     </ng-container>
     
