--- a/src/app/features/homepage/results/results.component.html
+++ b/src/app/features/homepage/results/results.component.html
@@ -21,6 +21,16 @@
       textColor="var(--light-text)"
       placeholder="Buscar nivel académico">
     </app-rounded-select-search>
+    <app-rounded-select-group-search
+      class="filter"
+      [list]="subjectWithAxis"
+      [control]="axisControl"
+      [loading]="isAxesLoading"
+      buttonText="Eje"
+      bgColor="var(--purple-color)"
+      textColor="var(--light-text)"
+      placeholder="Buscar eje">
+    </app-rounded-select-group-search>
     <app-rounded-select-search
       class="filter"
       [list]="subjectList"
@@ -30,16 +40,6 @@
       bgColor="var(--warn-color)"
       textColor="var(--light-text)"
       placeholder="Buscar asignatura">
-    </app-rounded-select-search>
-    <app-rounded-select-search
-      class="filter"
-      [list]="axesList"
-      [control]="axisControl"
-      [loading]="isAxesLoading"
-      buttonText="Eje"
-      bgColor="var(--purple-color)"
-      textColor="var(--light-text)"
-      placeholder="Buscar eje">
     </app-rounded-select-search>
     <app-rounded-select-search
       class="filter"
