--- a/src/app/shared/components/rounded-select-group-search/rounded-select-group-search.component.scss
+++ b/src/app/shared/components/rounded-select-group-search/rounded-select-group-search.component.scss
@@ -1,5 +1,3 @@
-// TODO: fix this
-
 app-rounded-select-group-search {
     display: flex;
     flex-direction: column;
@@ -13,7 +11,6 @@ app-rounded-select-group-search {
 
         visibility: hidden;
         height: 0;
-        width: 100%;
 
         * {
             margin: 0 !important;
@@ -23,8 +20,12 @@ app-rounded-select-group-search {
 
     .button-toggle-select {
         display: block;
-        width: 100%;
-
         border-radius: 10px;
+    }
+}
+
+@media (max-width: 48rem) {
+    app-rounded-select-group-search {
+        width: 100%;
     }
 }
