--- a/src/assets/styles/material/_overloads.scss
+++ b/src/assets/styles/material/_overloads.scss
@@ -1,11 +1,10 @@
-// TODO: Fix this, need in rounder select but no in normal mat selects
 // Mobile  responsive fix to center options in scren
-// @media (max-width: 48rem) {
-//     .cdk-overlay-pane {
-//         position: static;
-//     }
-//     .cdk-overlay-connected-position-bounding-box {
-//         align-items: center;
-//         justify-content: center;
-//     }
-// }
+@media (max-width: 48rem) {
+    .cdk-overlay-pane {
+        position: static;
+    }
+    .cdk-overlay-connected-position-bounding-box {
+        align-items: center;
+        justify-content: center;
+    }
+}
