fix(planishare): fix style details

--- a/src/app/features/homepage/homepage/homepage.component.html
+++ b/src/app/features/homepage/homepage/homepage.component.html
@@ -20,6 +20,7 @@
         [list]="academicLevelsList"
         [control]="academicLevelControl"
         [loading]="isAcademicLevelsLoading"
+        [showSearch]="false"
         buttonText="Nivel Académico"
         bgColor="var(--primary-color)"
         textColor="var(--light-text)"
