--- a/src/app/features/posts/user-posts/user-posts.component.html
+++ b/src/app/features/posts/user-posts/user-posts.component.html
@@ -20,6 +20,7 @@
                     [list]="academicLevelsList"
                     [control]="academicLevelControl"
                     [loading]="isAcademicLevelsLoading"
+                    [showSearch]="false"
                     buttonText="Nivel Académico"
                     bgColor="var(--primary-color)"
                     textColor="var(--light-text)"
@@ -49,6 +50,7 @@
                     class="filter"
                     [list]="orderingList"
                     [control]="orderingControl"
+                    [showSearch]="false"
                     buttonText="Ordenar por"
                     bgColor="var(--green-dark-color)"
                     textColor="var(--light-text)"
