--- a/src/app/features/homepage/results/results.component.html
+++ b/src/app/features/homepage/results/results.component.html
@@ -16,6 +16,7 @@
       [list]="academicLevelsList"
       [control]="academicLevelControl"
       [loading]="isAcademicLevelsLoading"
+      [showSearch]="false"
       buttonText="Nivel Académico"
       bgColor="var(--primary-color)"
       textColor="var(--light-text)"
@@ -45,6 +46,7 @@
       class="filter"
       [list]="orderingList"
       [control]="orderingControl"
+      [showSearch]="false"
       buttonText="Ordenar por"
       bgColor="var(--green-dark-color)"
       textColor="var(--light-text)"
