--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -87,6 +87,11 @@
     color: var(--light-text);
 }
 
+.button-active-red {
+    background-color: var(--warn-color);
+    color: var(--light-text);
+}
+
 @media (max-width: 48rem) {
     .navbar {
         padding: 0.5rem 1rem;
